too long movement bug fix

--- a/app/assets/stylesheets/adventure.css.scss
+++ b/app/assets/stylesheets/adventure.css.scss
@@ -97,7 +97,6 @@ for the about.css.scss file custom styling*/
 
 .campaigns-adventure-prompt-container {
   position: relative;
-  z-index: 2;
   display: inline-block;
   width: 6em;
   height: 8em;
